# fiap-tech-challenge-fase4

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  diagnostico.py  mlflow.db  pyproject.toml  requirements.txt
api/: __init__.py  main.py
data/01_raw/: CMIG4.SA_data_raw.csv
data/02_processed/: test_scaled.npy  train_scaled.npy  valid_scaled.npy
mlruns/0/: meta.yaml
mlruns/739333670113312840/: meta.yaml
mlruns/739333670113312840/9e7dbae40c5b43beb25c163131053ba4/: meta.yaml
mlruns/739333670113312840/9e7dbae40c5b43beb25c163131053ba4/metrics/: epoch  train_loss  valid_loss
mlruns/739333670113312840/9e7dbae40c5b43beb25c163131053ba4/tags/: mlflow.runName  mlflow.source.name
mlruns/739333670113312840/b051ea1cca3847a88bbfb98f12c6cc99/: meta.yaml
mlruns/739333670113312840/b051ea1cca3847a88bbfb98f12c6cc99/metrics/: epoch  train_loss  valid_loss
mlruns/739333670113312840/b051ea1cca3847a88bbfb98f12c6cc99/tags/: mlflow.source.git.commit  mlflow.source.name
mlruns/739333670113312840/e9b605db87634f0dbcc036c78b847cb8/: meta.yaml
mlruns/739333670113312840/e9b605db87634f0dbcc036c78b847cb8/metrics/: test_mae  test_mape  test_rmse
mlruns/739333670113312840/e9b605db87634f0dbcc036c78b847cb8/tags/: mlflow.runName  mlflow.source.name
models/: baseline_stats.json  lstm_model.pth  metrics.json  model_config.json  scaler.joblib
models/checkpoints/: best-checkpoint.ckpt
scripts/: 01_coleta_dados.py  02_preprocess.py  03_train.py  04_evaluate.py  check_artifacts.py
src/: __init__.py  config.py  dataset.py  model.py
tests/: test_integration.py
(+2 files in other folders)
