[tool.poetry]
name = "tech-challenge-deep-learning"
version = "0.1.0"
description = ""
authors = ["fernando-lfs <fernando.l.f@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.66"
panda = "^0.3.1"
scikit-learn = "^1.7.2"
numpy = "^2.3.4"
joblib = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
