[tool.poetry]
name = "tech-challenge-deep-learning"
version = "0.1.0"
description = ""
authors = ["fernando-lfs <fernando.l.f@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
yfinance = "^0.2.66"
panda = "^0.3.1"
scikit-learn = "^1.7.2"
numpy = "^2.3.4"
joblib = "^1.5.2"
torch = "^2.9.1"
matplotlib = "^3.10.7"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
psutil = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
